<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#D5D5D5">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/top_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="@+id/top_background"
        app:layout_constraintEnd_toEndOf="@+id/top_background"
        app:layout_constraintStart_toStartOf="@+id/top_background"
        app:layout_constraintTop_toBottomOf="@+id/top_background"
        app:layout_constraintVertical_bias="0.443" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coolman"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gmail"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf = "@+id/email">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ic1"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/size55"
            android:layout_marginEnd="@dimen/size55"
            android:background="@drawable/style_button1"
            android:drawablePadding="@dimen/size15"
            android:drawableStart="@drawable/ic_1"
            android:paddingStart="@dimen/paddind_start"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/size10"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ic2"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/size55"
            android:layout_marginEnd="@dimen/size55"
            android:background="@drawable/style_button1"
            android:drawablePadding="@dimen/size15"
            android:drawableStart="@drawable/ic_2"
            android:paddingStart="@dimen/paddind_start"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/size10"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ic3"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/size55"
            android:layout_marginEnd="@dimen/size55"
            android:background="@drawable/style_button1"
            android:drawablePadding="@dimen/size15"
            android:drawableStart="@drawable/ic_3"
            android:paddingStart="@dimen/paddind_start"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/size10"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ic4"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/size55"
            android:layout_marginEnd="@dimen/size55"
            android:background="@drawable/style_button1"
            android:drawablePadding="@dimen/size15"
            android:drawableStart="@drawable/ic_4"
            android:paddingStart="@dimen/paddind_start"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/size10"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ic5"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/size55"
            android:layout_marginEnd="@dimen/size55"
            android:background="@drawable/style_button1"
            android:drawablePadding="@dimen/size15"
            android:drawableStart="@drawable/ic_5"
            android:paddingStart="@dimen/paddind_start"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/size10"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ic6"
            android:textAllCaps="false"
            android:background="@drawable/style_btn2"
            android:gravity="center"
            android:layout_marginStart="@dimen/size55"
            android:layout_marginEnd="@dimen/size55"
            android:drawablePadding="@dimen/size15"
            android:paddingStart="@dimen/paddind_start"
            android:layout_marginTop="@dimen/size10"/>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>